--- a/style.css
+++ b/style.css
@@ -214,6 +214,23 @@ a.to-top {
 	font-weight: bold;
 }
 
+.gallery {
+	background-color: rgba(255,255,255, 0.67);
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-family: 'Anton', sans-serif;
+	font-size: 24px
+}
+.gallery-title {
+	margin-top: 5px;
+}
+
+.gallery-thb {
+	background-color: rgba(255,255,255,1);
+	padding: 10px;
+	margin: 10px;
+}
+
 @media (min-width: 768px) {
 
 	.container {
